--- a/src/app/components/volunteer/volunteer.component.html
+++ b/src/app/components/volunteer/volunteer.component.html
@@ -6,14 +6,14 @@
         <div class="col-6">
             <h6>מידע אישי</h6>
             <input class="form-control" placeholder="שם פרטי"/>
-            <select class="form-select form-control" aria-label="Default select example">
+            <!-- <select class="form-select form-control" aria-label="Default select example">
                 <option selected>טייטל</option>
                 <option value="2">רב</option>
                 <option value="3">דוקטור</option>
                 <option value="4">פרופסור</option>
                 <option value="5">עורך דין</option>
                 <option value="6">רואה חשבון</option>
-            </select>
+            </select> -->
             <input class="form-control" placeholder="מספר זהות"/>
             <input class="form-control" placeholder="כתובת אימייל"/>
             <input class="form-control" placeholder="מספר טלפון"/>
@@ -98,7 +98,7 @@
 
             <h6 class="inline-title"> שפות:</h6>
 
-            <div *ngFor="let lang of languages" class="custom-control custom-checkbox">
+            <!-- <div *ngFor="let lang of languages" class="custom-control custom-checkbox">
 
                 <input type="checkbox" id="lang1" name="lang" class="custom-control-input" checked value="no">
 
@@ -108,14 +108,14 @@
                 <button  type="button" class="custom1" >כתיבה</button>
                 <button  type="button" class="custom1" >שפת אם</button>
 
-            </div>
+            </div> -->
             
         </div>
     </div>
 
    
     <div class="button-wapper">
-        <button type="button" class="btn btn-dark btn-perple btn-lg" (click) = "addValunteer()"> רישום</button>
+        <button type="button" class="btn btn-dark btn-perple btn-lg" (click) = "add()"> רישום</button>
     </div>
     
 </div>
@@ -249,7 +249,7 @@
             </div>
 
             <div class="button-wapper">
-                <button type="button" class="btn btn-dark btn-perple btn-lg" (click) = "addValunteer()"> רישום</button>
+                <button type="button" class="btn btn-dark btn-perple btn-lg" (click) = "add()"> רישום</button>
             </div>
         </div>
 
