--- a/src/app/components/assisted/assisted.component.html
+++ b/src/app/components/assisted/assisted.component.html
@@ -6,9 +6,10 @@
         <div class="col-6">
             <h6>מידע אישי</h6>
             <input class="form-control" placeholder="שם פרטי"/>
-            <input class="form-control" placeholder="גיל "/>
+            <input class="form-control" placeholder="תעודת זהות "/>
             <input class="form-control" placeholder="כתובת אימייל"/>
-            <input class="form-control" placeholder="טלפון נוסף "/>
+            <!-- <input class="form-control" placeholder="טלפון נוסף "/> -->
+            <input type="date" class="form-control" placeholder="תאריך לידה"/>
 
         </div>
         
@@ -36,14 +37,14 @@
     <div class="row prograph">
         <div class="col-6">
             <h6>כתובת</h6>
-            <input class="form-control" placeholder="מספר דירה"/>
-            <input class="form-control" placeholder="רחוב"/>
-            <input class="form-control" placeholder="קומה"/>
+            <input class="form-control" placeholder="עיר "/>
+            <input class="form-control" placeholder="מספר בנין"/>
+            <input class="form-control" placeholder="מספר בית"/>
 
         </div>
         <div class="col-6 second-col">
-            <input class="form-control" placeholder="מספר בית"/>
-            <input class="form-control" placeholder="עיר"/>
+            <input class="form-control" placeholder=" רחוב"/>
+            <input class="form-control" placeholder="קומה"/>
             <input class="form-control" placeholder="מיקוד"/>
         </div>
     </div>
