--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,14 @@
-<p>login works!</p>
+<div class="header-img"></div>
+
+<div class="section first-section">
+    <h2 class="title">ברוכים הבאים</h2>
+    <div class="yes row prograph">
+        <div class="col-6">
+            <input class="form-control" placeholder="שם משתמש">
+            <input class="form-control" placeholder="סיסמא">
+            <a routerLink="/volunteer">שכחתי את הסיסמא?</a>
+        </div>
+    <div class="button-wapper">
+        <button type="button" class="btn btn-dark btn-perple btn-lg"> אישור</button>
+    </div>
+</div>
