--- a/src/app/components/volunteering-domain/volunteering-domain.component.css
+++ b/src/app/components/volunteering-domain/volunteering-domain.component.css
@@ -1,9 +1,11 @@
 .header-img
 {
     height: 40vh;
-    width: 100vw;
+    width: 100%;
     background-image: url('../../../assets/images/4.png');
-    margin-bottom: 100vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-bottom: 125vh;
 }
 .section{
     border-radius: 10px;
