--- a/src/app/components/volunteering-domain/volunteering-domain.component.html
+++ b/src/app/components/volunteering-domain/volunteering-domain.component.html
@@ -33,10 +33,15 @@
                 <option value="2">סקרים</option>
                 <option value="3">התרמות</option>               
             </select>
-            <input class="form-control" placeholder="חלוקת מים"/>
-            <input class="form-control" placeholder="רווחה/עובדת סוציאלית"/>
-            <input class="form-control" placeholder="קליטת תושבי חוץ "/>
-            <input class="form-control" placeholder="פסיכולוגים "/>
+            <!-- <input class="form-control" placeholder="חלוקת מים"/> -->
+            <button type="button" class="form-control">חלוקת מים</button>
+            <!-- <input class="form-control" placeholder="רווחה/עובדת סוציאלית"/> -->
+            <button type="button" class="form-control">רווחה/עובדת סוציאלית</button>
+            <!-- <input class="form-control" placeholder="קליטת תושבי חוץ "/> -->
+            <button type="button" class="form-control">קליטת תושבי חוץ</button>
+            <!-- <input class="form-control" placeholder="פסיכולוגים "/> -->
+            <button type="button" class="form-control"> פסיכולוגים</button>
+
 
         </div>
         
