--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -6,7 +6,7 @@
         <div class="col-6">
             <input class="form-control" placeholder="שם משתמש">
             <input class="form-control" placeholder="סיסמא">
-            <a routerLink="/volunteer">שכחתי את הסיסמא?</a>
+            <!-- <a routerLink="/volunteer">שכחתי את הסיסמא?</a> -->
         </div>
     <div class="button-wapper">
         <button type="button" class="btn btn-dark btn-perple btn-lg"> אישור</button>
