--- a/src/app/components/assisted/assisted.component.html
+++ b/src/app/components/assisted/assisted.component.html
@@ -47,10 +47,14 @@
             <input class="form-control" placeholder="קומה"/>
             <input class="form-control" placeholder="מיקוד"/>
         </div>
+        <div class="col-6">
+            <button type="button" class="form-control" routerLink="/volunteering-domain" >תחומי התנדבות</button>
+        </div>
     </div>
     <div class="row prograph">
 
         <div class="col">
+           
 
             <h6 class="inline-title">סוג טלפון:</h6>
 
@@ -97,7 +101,8 @@
                 <input #lang4 type="checkbox" id="lang5" name="lang" class="custom-control-input" checked value="arabic">
                 <label class="custom-control-label purple" for="lang5">ערבית</label>
             </div>
-       
+         
+           
 
         </div>
     </div>
