--- a/src/app/components/volunteer/volunteer.component.html
+++ b/src/app/components/volunteer/volunteer.component.html
@@ -302,8 +302,10 @@
                         <input class="form-control" placeholder="תפקיד שירות  "/>
                         <!-- <input class="form-control" placeholder="מקום שירות  "/> -->
                         <input type="date" class="form-control" placeholder="תאריך שחרור"/>
+                        <button type="button" class="form-control" routerLink="/volunteering-domain" >תחומי התנדבות</button>
+
                     </div>
-                  
+                    
                  
                    
                     <!-- <div>
