--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,11 +4,18 @@
     <h2 class="title">ברוכים הבאים</h2>
     <div class="yes row prograph">
         <div class="col-6">
-            <input class="form-control" placeholder="שם משתמש">
+            <input class="form-control" placeholder="email/שם משתמש">
             <input class="form-control" placeholder="סיסמא">
             <!-- <a routerLink="/volunteer">שכחתי את הסיסמא?</a> -->
+            <div class="first">
+                <label><h6>פעם ראשונה?</h6></label>
+                <!-- <button class="btn btn-dark btn-perple1 btn-lg" type="button" routerLink="/volunteer">מתנדב</button>
+                <button class="btn btn-dark btn-perple1 btn-lg" type="button" routerLink="/volunteer">נעזר</button> -->
+                <a  routerLink="/volunteer">מתנדב</a>   
+                <a  routerLink="/assisted">נעזר</a>  
+            </div>
         </div>
     <div class="button-wapper">
-        <button type="button" class="btn btn-dark btn-perple btn-lg"> אישור</button>
+        <button type="button" class="btn btn-dark btn-perple btn-lg"> התחבר</button>
     </div>
 </div>
