--- a/src/app/components/app.component.html
+++ b/src/app/components/app.component.html
@@ -1,8 +1,8 @@
 <div class="wapper">
     <div class="maim-menu row">
         <div class="col-10">
-            <a routerLink="/assisted">נעזרים</a>
-            <a routerLink="/volunteer" >מתנדבים</a>
+            <!-- <a routerLink="/assisted">נעזרים</a> -->
+            <!-- <a routerLink="/volunteer" >מתנדבים</a> -->
             <!-- <a routerLink="/volunteering-domain">תחומי התנדבות</a> -->
         </div>
         <div class="col-2">Logo</div>
