--- a/src/app/components/assisted/assisted.component.html
+++ b/src/app/components/assisted/assisted.component.html
@@ -6,7 +6,7 @@
         <div class="col-6">
             <h6>מידע אישי</h6>
             <input class="form-control" placeholder="שם פרטי"/>
-            <input class="form-control" placeholder="תעודת זהות "/>
+            <input class="form-control"  placeholder="תעודת זהות "/>
             <input class="form-control" placeholder="כתובת אימייל"/>
             <!-- <input class="form-control" placeholder="טלפון נוסף "/> -->
             <input type="date" class="form-control" placeholder="תאריך לידה"/>
@@ -23,7 +23,7 @@
                 <option value="5">אלמן/ה</option> -->
                 <option *ngFor="let item of list">{{item.description}}</option>
               </select>
-            <input class="form-control" placeholder="מספר טלפון "/>
+            <input class="form-control"  placeholder="מספר טלפון "/>
 
             <select class="form-select form-control" aria-label="Default select example">
                 <!-- <option selected>בחר מין</option>
@@ -38,17 +38,23 @@
         <div class="col-6">
             <h6>כתובת</h6>
             <input class="form-control" placeholder="עיר "/>
-            <input class="form-control" placeholder="מספר בנין"/>
-            <input class="form-control" placeholder="מספר בית"/>
+            <input class="form-control"  placeholder="מספר בנין"/>
+            <input class="form-control"  placeholder="מספר בית"/>
 
         </div>
         <div class="col-6 second-col">
             <input class="form-control" placeholder=" רחוב"/>
-            <input class="form-control" placeholder="קומה"/>
-            <input class="form-control" placeholder="מיקוד"/>
+            <input class="form-control"  placeholder="קומה"/>
+            <input class="form-control"  placeholder="מיקוד"/>
         </div>
-        <div class="col-6">
+        <div class="row prograph">
+          <div class="col-6">
+            <h6>תחומים וסיסמא</h6>
             <button type="button" class="form-control" routerLink="/volunteering-domain" >תחומי התנדבות</button>
+          </div>
+          <div class="col-6 second-col">
+            <input class="form-control" placeholder="סיסמא">
+          </div>
         </div>
     </div>
     <div class="row prograph">
