--- a/src/app/components/volunteer/volunteer.component.html
+++ b/src/app/components/volunteer/volunteer.component.html
@@ -63,6 +63,15 @@
         </div>
     </div>
     <div class="row prograph">
+        <div class="col-6">
+          <h6>תחומים וסיסמא</h6>
+          <button type="button" class="form-control" routerLink="/volunteering-domain" >תחומי התנדבות</button>
+        </div>
+        <div class="col-6 second-col">
+          <input class="form-control" placeholder="סיסמא">
+        </div>
+      </div>
+    <div class="row prograph">
 
         <div class="col">
 
@@ -144,29 +153,31 @@
         <div>
             <div class="row prograph">
                 <!-- <h5> רכב/רישיון נהיגה</h5> -->
-                <div class="col">
+                <div class="col-6">
+                    <div>
+                        <h6 class="inline-title"> רשיון נהיגה :</h6>
         
-                    <h6 class="inline-title"> רשיון נהיגה :</h6>
-        
-                    <div class="custom-control custom-radio custom-control-inline">
-                        <input type="radio" id="license1" name="license" class="custom-control-input" value="yes">
-                        <label class="custom-control-label purple" for="license1">כן</label>
-                    </div>
-                    <div class="custom-control custom-radio custom-control-inline">
-                        <input type="radio" id="license2" name="license" class="custom-control-input" value="no">
-                        <label class="custom-control-label purple" for="license2">לא</label>
+                        <div class="custom-control custom-radio custom-control-inline">
+                            <input type="radio" id="license1" name="license" class="custom-control-input" value="yes">
+                            <label class="custom-control-label purple" for="license1">כן</label>
+                        </div>
+                        <div class="custom-control custom-radio custom-control-inline">
+                            <input type="radio" id="license2" name="license" class="custom-control-input" value="no">
+                            <label class="custom-control-label purple" for="license2">לא</label>
+                        </div>
                     </div>
                     <div class="col-6">
-                    <select class="form-select form-control" aria-label="Default select example">
+                     <select class="form-select form-control" aria-label="Default select example">
                         <option selected>סוג רשיון</option>
                         <option value="1">ר.ב</option>
                         <option value="2">ר.ג</option>
                         <option value="3">אופנוע</option>
                         <option value="4">משאית</option>
                         <option value="5">אוטובוס</option>
-                    </select>
-                    <input type="date" class="form-control" placeholder="תאריך תוקף"/>
-                </div>
+                     </select>
+                     <input type="date" class="form-control" placeholder="תאריך תוקף"/>
+                    </div>
+                    
                 <!-- <div class="col">
                     <h6 class="inline-title"> וו גרירה  :</h6>
         
