--- a/src/app/components/app.component.html
+++ b/src/app/components/app.component.html
@@ -5,7 +5,7 @@
             <!-- <a routerLink="/volunteer" >מתנדבים</a> -->
             <!-- <a routerLink="/volunteering-domain">תחומי התנדבות</a> -->
         </div>
-        <div class="col-2">Logo</div>
+        <div class="col-2">The Voluneers</div>
     </div>
 
     <!-- <a [routerLink]="login"></a> -->
