--- a/src/app/components/assisted/assisted.component.html
+++ b/src/app/components/assisted/assisted.component.html
@@ -5,15 +5,9 @@
     <div class="row prograph">
         <div class="col-6">
             <h6>מידע אישי</h6>
-<<<<<<< HEAD
             <input class="form-control" placeholder="שם פרטי" type="text" #ngFirstName="ngModel" [(ngModel)]="Assisted.Assisted.first_name" name="first_name"/>
             <input class="form-control" placeholder="תעודת זהות" type="text" #ngId="ngModel" [(ngModel)]="Assisted.Assisted.id_assisted" name="id_assisted"/>
             <input class="form-control" placeholder="כתובת אימייל" type="email" #ngId="ngModel" [(ngModel)]="Assisted.Assisted.e_mail" name="e_mail"/>
-=======
-            <input class="form-control" placeholder="שם פרטי"/>
-            <input class="form-control"  placeholder="תעודת זהות "/>
-            <input class="form-control" placeholder="כתובת אימייל"/>
->>>>>>> ec1125be280d2a3fe3c6da9e72a89044f1fccb9e
             <!-- <input class="form-control" placeholder="טלפון נוסף "/> -->
             <input type="date" class="form-control" placeholder="תאריך לידה" type="date" #ngDate="ngModel" [(ngModel)]="Assisted.Assisted.date_birth" name="date_birth"/>
         </div>      
@@ -22,12 +16,7 @@
             <select class="form-select form-control" aria-label="Default select example">
                 <option *ngFor="let item of list">{{item.description}}</option>
               </select>
-<<<<<<< HEAD
             <input class="form-control" placeholder="מספר טלפון" type="number" #ngPhone="ngModel" [(ngModel)]="Assisted.Assisted.phone" name="phone"/>
-=======
-            <input class="form-control"  placeholder="מספר טלפון "/>
-
->>>>>>> ec1125be280d2a3fe3c6da9e72a89044f1fccb9e
             <select class="form-select form-control" aria-label="Default select example">
                 <option *ngFor="let item of list1">{{item.description}}</option>
               </select>
@@ -36,7 +25,6 @@
     <div class="row prograph">
         <div class="col-6">
             <h6>כתובת</h6>
-<<<<<<< HEAD
             <input class="form-control" placeholder="עיר" type="text" #ngCity="ngModel" [(ngModel)]="Assisted.Assisted.code_city" name="code_city"/>
             <input class="form-control" placeholder="מספר בנין" type="number" #ngNumberBuild="ngModel" [(ngModel)]="Assisted.Assisted.number_building" name="number_building"/>
             <input class="form-control" placeholder="מספר בית" type="number" #ngNumberHouse="ngModel" [(ngModel)]="Assisted.Assisted.number_house" name="number_house"/>
@@ -45,17 +33,6 @@
             <input class="form-control" placeholder=" רחוב" type="text" #ngStreet="ngModel" [(ngModel)]="Assisted.Assisted.street" name="street"/>
             <input class="form-control" placeholder="קומה" type="number" #ngFloor="ngModel" [(ngModel)]="Assisted.Assisted.number_floor" name="number_floor"/>
             <input class="form-control" placeholder="מיקוד" type="number" #ngPostalCode="ngModel" [(ngModel)]="Assisted.Assisted.postal_code" name="postal_code"/>
-=======
-            <input class="form-control" placeholder="עיר "/>
-            <input class="form-control"  placeholder="מספר בנין"/>
-            <input class="form-control"  placeholder="מספר בית"/>
-
-        </div>
-        <div class="col-6 second-col">
-            <input class="form-control" placeholder=" רחוב"/>
-            <input class="form-control"  placeholder="קומה"/>
-            <input class="form-control"  placeholder="מיקוד"/>
->>>>>>> ec1125be280d2a3fe3c6da9e72a89044f1fccb9e
         </div>
         <div class="row prograph">
           <div class="col-6">
@@ -90,24 +67,24 @@
             <h6 class="inline-title"> שפות:</h6>
 
             <div class="custom-control custom-checkbox">
-                <input type="checkbox" id="lang1" name="lang" class="custom-control-input" checked value="no">
+                <input type="checkbox" id="lang1" name="lang" class="custom-control-input"  value="no">
 
                 <label class="custom-control-label purple" for="lang1">עברית</label>
             </div>
             <div class="custom-control custom-checkbox">
-                <input #lang2 type="checkbox" id="lang2" name="lang" class="custom-control-input" checked value="english">
+                <input #lang2 type="checkbox" id="lang2" name="lang" class="custom-control-input"  value="english">
                 <label class="custom-control-label purple" for="lang2">אנגלית</label>
             </div>
             <div class="custom-control custom-checkbox">
-                <input #lang3 type="checkbox" id="lang3" name="lang" class="custom-control-input" checked value="rusion">
+                <input #lang3 type="checkbox" id="lang3" name="lang" class="custom-control-input"  value="rusion">
                 <label class="custom-control-label purple" for="lang3">רוסית</label>
             </div>
             <div class="custom-control custom-checkbox">
-                <input #lang4 type="checkbox" id="lang4" name="lang" class="custom-control-input" checked value="spanish">
+                <input #lang4 type="checkbox" id="lang4" name="lang" class="custom-control-input"  value="spanish">
                 <label class="custom-control-label purple" for="lang4">ספרדית</label>
             </div>
             <div class="custom-control custom-checkbox">
-                <input #lang4 type="checkbox" id="lang5" name="lang" class="custom-control-input" checked value="arabic">
+                <input #lang4 type="checkbox" id="lang5" name="lang" class="custom-control-input"  value="arabic">
                 <label class="custom-control-label purple" for="lang5">ערבית</label>
             </div>
         </div>
