--- a/src/app/components/volunteer/volunteer.component.css
+++ b/src/app/components/volunteer/volunteer.component.css
@@ -5,7 +5,7 @@
     background-image: url('../../../assets/images/2.png');
     background-repeat: no-repeat;
     background-size: cover;
-    margin-bottom: 125vh;
+    /* margin-bottom: 125vh; */
 }
 .section{
     border-radius: 10px;
@@ -16,7 +16,8 @@
 }
 .first-section{
     border-top: 5px solid white!important;
-    position:absolute;
+    /* position:absolute; */
+    margin-top: -15px;
     top: 25vh;
     width: -webkit-fill-available;
 }
