--- a/src/app/components/volunteer/volunteer.component.html
+++ b/src/app/components/volunteer/volunteer.component.html
@@ -6,7 +6,7 @@
         <div class="col-6">
             <h6>מידע אישי</h6>
             <input class="form-control" placeholder="שם פרטי" type="text" #ngFirstName="ngModel" [(ngModel)]="Volunteer.Volunteer.firstName_volunteer" name="firstName_volunteer"/>
-            <select class="form-select form-control" aria-label="Default select example"></select>
+            <!-- <select class="form-select form-control" aria-label="Default select example"></select> -->
             <input class="form-control" placeholder="מספר זהות" type="text" #ngId="ngModel" [(ngModel)]="Volunteer.Volunteer.id_volunteer" name="id_volunteer"/>
             <input class="form-control" placeholder="כתובת אימייל" type="email" #ngEmail="ngModel" [(ngModel)]="Volunteer.Volunteer.e_mail" name="e_mail"/>
             <input class="form-control" placeholder="מספר טלפון" type="number" #ngPhone="ngModel" [(ngModel)]="Volunteer.Volunteer.phone" name="phone"/>
@@ -21,8 +21,15 @@
             <select class="form-select form-control"  aria-label="Default select example">
                 <option *ngFor="let item of list1">{{item.description}}</option>
                 <!-- <! <select [(ngModel)]="takingDeliveryService.newTakingDelivery.TDCityID" [ngModelOptions]="{standalone: true}" nam="city"> --> 
-            </select>   
+            </select> 
         </div>
+            <div class="col">
+              <h6>תחומים וסיסמא</h6>
+              <button type="button" class="form-control" routerLink="/volunteering-domain" >תחומי התנדבות</button>
+            </div>
+            <div class="col-6 second-col">
+              <input class="form-control" placeholder="סיסמא">
+            </div>  
     </div>
     <div class="row prograph">
         <div class="col-6">
@@ -38,20 +45,7 @@
         </div>
     </div>
     <div class="row prograph">
-<<<<<<< HEAD
-=======
-        <div class="col-6">
-          <h6>תחומים וסיסמא</h6>
-          <button type="button" class="form-control" routerLink="/volunteering-domain" >תחומי התנדבות</button>
-        </div>
-        <div class="col-6 second-col">
-          <input class="form-control" placeholder="סיסמא">
-        </div>
-      </div>
-    <div class="row prograph">
-
->>>>>>> ec1125be280d2a3fe3c6da9e72a89044f1fccb9e
-        <div class="col">
+        <!-- <div class="col">
             <h6 class="inline-title">סוג טלפון:</h6>
             <div class="custom-control custom-radio custom-control-inline">
                 <input type="radio" id="phone1" name="phone" class="custom-control-input" value="SMS">
@@ -65,7 +59,7 @@
                 <input type="radio" id="phone3" name="phone" class="custom-control-input" value="kosher">
                 <label class="custom-control-label purple" for="phone3">כשר</label>
             </div>
-        </div>
+        </div> -->
     </div>
     <!-- <div class="row prograph">
         <div class="col">
@@ -86,29 +80,28 @@
         <div class="col">
             <h6 class="inline-title"> שפות:</h6>
             <div class="custom-control custom-checkbox">
-                <input type="checkbox" id="lang1" name="lang" class="custom-control-input" checked value="no">
+                <input type="checkbox" id="lang1" name="lang" class="custom-control-input" >
                 <label class="custom-control-label purple" for="lang1">עברית</label>
             </div>
             <div class="custom-control custom-checkbox">
-                <input #lang2 type="checkbox" id="lang2" name="lang" class="custom-control-input" checked value="english">
+                <input #lang2 type="checkbox" id="lang2" name="lang" class="custom-control-input" >
                 <label class="custom-control-label purple" for="lang2">אנגלית</label>
             </div>
             <div class="custom-control custom-checkbox">
-                <input #lang3 type="checkbox" id="lang3" name="lang" class="custom-control-input" checked value="rusion">
+                <input #lang3 type="checkbox" id="lang3" name="lang" class="custom-control-input" >
                 <label class="custom-control-label purple" for="lang3">רוסית</label>
             </div>
             <div class="custom-control custom-checkbox">
-                <input #lang4 type="checkbox" id="lang4" name="lang" class="custom-control-input" checked value="spanish">
+                <input #lang4 type="checkbox" id="lang4" name="lang" class="custom-control-input" >
                 <label class="custom-control-label purple" for="lang4">ספרדית</label>
             </div>
             <div class="custom-control custom-checkbox">
-                <input #lang4 type="checkbox" id="lang5" name="lang" class="custom-control-input" checked value="arabic">
+                <input #lang4 type="checkbox" id="lang5" name="lang" class="custom-control-input" >
                 <label class="custom-control-label purple" for="lang5">ערבית</label>
             </div>
         </div>
     </div>   
 </div>
-
 <div class="section">
     <h2 class="title"> מידע נוסף למתנדב </h2>
         <div>
@@ -116,8 +109,7 @@
         <div>
             <div class="row prograph">
                 <!-- <h5> רכב/רישיון נהיגה</h5> -->
-<<<<<<< HEAD
-                <div class="col">     
+                <div class="col">   
                     <h6 class="inline-title"> רשיון נהיגה :</h6>      
                     <div class="custom-control custom-radio custom-control-inline">
                         <input type="radio" id="license1" name="license" class="custom-control-input" value="yes">
@@ -133,33 +125,6 @@
                     </select>
                     <input type="date" class="form-control" placeholder="תאריך תוקף"/>
                 </div>
-=======
-                <div class="col-6">
-                    <div>
-                        <h6 class="inline-title"> רשיון נהיגה :</h6>
-        
-                        <div class="custom-control custom-radio custom-control-inline">
-                            <input type="radio" id="license1" name="license" class="custom-control-input" value="yes">
-                            <label class="custom-control-label purple" for="license1">כן</label>
-                        </div>
-                        <div class="custom-control custom-radio custom-control-inline">
-                            <input type="radio" id="license2" name="license" class="custom-control-input" value="no">
-                            <label class="custom-control-label purple" for="license2">לא</label>
-                        </div>
-                    </div>
-                    <div class="col-6">
-                     <select class="form-select form-control" aria-label="Default select example">
-                        <option selected>סוג רשיון</option>
-                        <option value="1">ר.ב</option>
-                        <option value="2">ר.ג</option>
-                        <option value="3">אופנוע</option>
-                        <option value="4">משאית</option>
-                        <option value="5">אוטובוס</option>
-                     </select>
-                     <input type="date" class="form-control" placeholder="תאריך תוקף"/>
-                    </div>
-                    
->>>>>>> ec1125be280d2a3fe3c6da9e72a89044f1fccb9e
                 <!-- <div class="col">
                     <h6 class="inline-title"> וו גרירה  :</h6>
         
@@ -234,14 +199,14 @@
                 <div>
                     <h6 class="inline-title">  תוקף רשיון נשק :</h6>
                     <input type="date" class="form-control" placeholder="תאריך תוקף"/>
-                    <div class="custom-control custom-radio custom-control-inline">
+                    <!-- <div class="custom-control custom-radio custom-control-inline">
                         <input type="radio" id="validity1" name="validity" class="custom-control-input" value="yes">
                         <label class="custom-control-label purple" for="validity1">כן</label>
                     </div>
                     <div class="custom-control custom-radio custom-control-inline">
                         <input type="radio" id="validity2" name="validity" class="custom-control-input" value="no">
                         <label class="custom-control-label purple" for="validity2">לא</label> -->                        
-                 </div>
+                 <!-- </div> --> 
                 </div>
                 <div>
                     <h6 class="inline-title"> סוג רשיון:</h6>
@@ -288,7 +253,7 @@
                         <input class="form-control" placeholder="תפקיד שירות  "/>
                         <!-- <input class="form-control" placeholder="מקום שירות  "/> -->
                         <input type="date" class="form-control" placeholder="תאריך שחרור"/>
-                        <button type="button" class="form-control" routerLink="/volunteering-domain" >תחומי התנדבות</button>
+                        <!-- <button type="button" class="form-control" routerLink="/volunteering-domain" >תחומי התנדבות</button> -->
 
                     </div>
                     <!-- <div>
@@ -316,6 +281,7 @@
         <select class="form-select form-control" aria-label="Default select example">
             <option *ngFor="let item of list4">{{item.description}}</option>
         </select>
+
         <div class="button-wapper">
             <button type="submit" class="btn btn-dark btn-perple btn-lg"> אישור</button>
         </div>
