--- a/src/app/components/assisted/assisted.component.html
+++ b/src/app/components/assisted/assisted.component.html
@@ -57,7 +57,7 @@
     </div>
     <div class="row prograph">
         <div class="col">
-            <h6 class="inline-title">סוג טלפון:</h6>
+            <!-- <h6 class="inline-title">סוג טלפון:</h6>
             <div class="custom-control custom-radio custom-control-inline">
                 <input type="radio" id="phone1" name="phone" class="custom-control-input" value="SMS">
                 <label class="custom-control-label purple" for="phone1">SMS</label>
@@ -69,7 +69,7 @@
             <div class="custom-control custom-radio custom-control-inline">
                 <input type="radio" id="phone3" name="phone" class="custom-control-input" value="kosher">
                 <label class="custom-control-label purple" for="phone3">כשר</label>
-            </div>
+            </div> -->
         </div>
     </div>
     <div class="row prograph">
@@ -78,24 +78,24 @@
             <h6 class="inline-title"> שפות:</h6>
 
             <div class="custom-control custom-checkbox">
-                <input type="checkbox" id="lang1" name="lang" class="custom-control-input" checked value="no">
+                <input type="checkbox" id="lang1" name="lang" class="custom-control-input" >
 
                 <label class="custom-control-label purple" for="lang1">עברית</label>
             </div>
             <div class="custom-control custom-checkbox">
-                <input #lang2 type="checkbox" id="lang2" name="lang" class="custom-control-input" checked value="english">
+                <input #lang2 type="checkbox" id="lang2" name="lang" class="custom-control-input" >
                 <label class="custom-control-label purple" for="lang2">אנגלית</label>
             </div>
             <div class="custom-control custom-checkbox">
-                <input #lang3 type="checkbox" id="lang3" name="lang" class="custom-control-input" checked value="rusion">
+                <input #lang3 type="checkbox" id="lang3" name="lang" class="custom-control-input" >
                 <label class="custom-control-label purple" for="lang3">רוסית</label>
             </div>
             <div class="custom-control custom-checkbox">
-                <input #lang4 type="checkbox" id="lang4" name="lang" class="custom-control-input" checked value="spanish">
+                <input #lang4 type="checkbox" id="lang4" name="lang" class="custom-control-input" >
                 <label class="custom-control-label purple" for="lang4">ספרדית</label>
             </div>
             <div class="custom-control custom-checkbox">
-                <input #lang4 type="checkbox" id="lang5" name="lang" class="custom-control-input" checked value="arabic">
+                <input #lang4 type="checkbox" id="lang5" name="lang" class="custom-control-input" >
                 <label class="custom-control-label purple" for="lang5">ערבית</label>
             </div>
         </div>
