--- a/src/app/components/volunteer/volunteer.component.html
+++ b/src/app/components/volunteer/volunteer.component.html
@@ -88,23 +88,23 @@
         <div class="col">
             <h6 class="inline-title"> שפות:</h6>
             <div class="custom-control custom-checkbox">
-                <input type="checkbox" id="lang1" name="lang" class="custom-control-input" checked value="no">
+                <input type="checkbox" id="lang1" name="lang" class="custom-control-input" >
                 <label class="custom-control-label purple" for="lang1">עברית</label>
             </div>
             <div class="custom-control custom-checkbox">
-                <input #lang2 type="checkbox" id="lang2" name="lang" class="custom-control-input" checked value="english">
+                <input #lang2 type="checkbox" id="lang2" name="lang" class="custom-control-input" >
                 <label class="custom-control-label purple" for="lang2">אנגלית</label>
             </div>
             <div class="custom-control custom-checkbox">
-                <input #lang3 type="checkbox" id="lang3" name="lang" class="custom-control-input" checked value="rusion">
+                <input #lang3 type="checkbox" id="lang3" name="lang" class="custom-control-input" >
                 <label class="custom-control-label purple" for="lang3">רוסית</label>
             </div>
             <div class="custom-control custom-checkbox">
-                <input #lang4 type="checkbox" id="lang4" name="lang" class="custom-control-input" checked value="spanish">
+                <input #lang4 type="checkbox" id="lang4" name="lang" class="custom-control-input" >
                 <label class="custom-control-label purple" for="lang4">ספרדית</label>
             </div>
             <div class="custom-control custom-checkbox">
-                <input #lang4 type="checkbox" id="lang5" name="lang" class="custom-control-input" checked value="arabic">
+                <input #lang4 type="checkbox" id="lang5" name="lang" class="custom-control-input" >
                 <label class="custom-control-label purple" for="lang5">ערבית</label>
             </div>
         </div>
