--- a/src/app/components/assisted/assisted.component.html
+++ b/src/app/components/assisted/assisted.component.html
@@ -44,7 +44,7 @@
           </div>
         </div>
     </div>
-    <div class="row prograph">
+    <!-- <div class="row prograph">
         <div class="col">
             <h6 class="inline-title">סוג טלפון:</h6>
             <div class="custom-control custom-radio custom-control-inline">
@@ -60,7 +60,7 @@
                 <label class="custom-control-label purple" for="phone3">כשר</label>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="row prograph">
         <div class="col">
 
@@ -90,7 +90,7 @@
         </div>
     </div>
     <div class="button-wapper">
-        <button type="button" class="btn btn-dark btn-perple btn-lg"> רישום</button>
+        <button type="submit" class="btn btn-dark btn-perple btn-lg"> רישום</button>
     </div>   
 </div>
 </form>
