--- a/src/app/components/volunteer/volunteer.component.html
+++ b/src/app/components/volunteer/volunteer.component.html
@@ -12,7 +12,7 @@
             <input class="form-control" placeholder="מספר טלפון" type="number" #ngPhone="ngModel" [(ngModel)]="Volunteer.Volunteer.phone" name="phone"/>
         </div>
         <div class="col-6 second-col">
-            <input class="form-control" placeholder="שם משפחה" type="text" #ngLastName [ngModel]="Volunteer.Volunteer.lastName_volunteer" name="lastName_volunteer"/>
+            <input class="form-control" placeholder="שם משפחה" type="text" #ngLastName="ngModel" [(ngModel)]="Volunteer.Volunteer.lastName_volunteer" name="lastName_volunteer"/>
             <select class="form-select form-control" aria-label="Default select example">
                 <option *ngFor="let item of list">{{item.description}}</option>
             </select>
@@ -79,11 +79,12 @@
     <div class="row prograph">
         <div class="col">
             <h6 class="inline-title"> שפות:</h6>
-            <div class="custom-control custom-checkbox">
-                <input type="checkbox" id="lang1" name="lang" class="custom-control-input" >
-                <label class="custom-control-label purple" for="lang1">עברית</label>
+            
+            <div class="custom-control custom-checkbox" *ngFor="let item of list5">
+                <input type="checkbox" id="lang1" name="lang" class="custom-control-input">
+                <label class="custom-control-label purple" for="lang1">{{item.name_language}}</label>
             </div>
-            <div class="custom-control custom-checkbox">
+            <!-- <div class="custom-control custom-checkbox">
                 <input #lang2 type="checkbox" id="lang2" name="lang" class="custom-control-input" >
                 <label class="custom-control-label purple" for="lang2">אנגלית</label>
             </div>
@@ -98,7 +99,7 @@
             <div class="custom-control custom-checkbox">
                 <input #lang4 type="checkbox" id="lang5" name="lang" class="custom-control-input" >
                 <label class="custom-control-label purple" for="lang5">ערבית</label>
-            </div>
+            </div> -->
         </div>
     </div>   
 </div>
@@ -283,7 +284,7 @@
         </select>
 
         <div class="button-wapper">
-            <button type="submit" class="btn btn-dark btn-perple btn-lg"> אישור</button>
+            <button type="submit" class="btn btn-dark btn-perple btn-lg"> אישור  </button>
         </div>
     </div>
 </div>
