--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,7 +3,7 @@
 <div class="section first-section">
     <h2 class="title">ברוכים הבאים</h2>
     <div class="yes row prograph">
-        <div class="col-6">
+        <div class="col-6 col-sm-12">
             <input class="form-control" placeholder="email/שם משתמש">
             <input class="form-control" placeholder="סיסמא">
             <!-- <a routerLink="/volunteer">שכחתי את הסיסמא?</a> -->
@@ -15,7 +15,7 @@
                 <a  routerLink="/assisted">נעזר</a>  
             </div>
         </div>
-    <div class="button-wapper">
+    <div class="button-wapper col-sm-12" >
         <button type="button" class="btn btn-dark btn-perple btn-lg"> התחבר</button>
     </div>
 </div>
